# focus-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  credentials.py  data_source.py  focus_config.py  focus_mcp_server.py  focus_queries.py  focus_spec_loader.py  main.py  mcp_config.json  pyproject.toml
.github/workflows/: docker-publish.yml
resources/queries/: focus_use_cases.yaml  focus_use_cases_adjustments.yaml
resources/queries/queries_v1_0/: allocate_multi_currency_charges_per_application.sql  analyze_cost_per_compute_service_for_a_subaccount.sql  analyze_costs_by_availability_zone_for_a_subaccoun.sql  analyze_costs_by_service_name.sql  analyze_costs_of_components_of_a_resource.sql  analyze_marketplace_vendors_costs.sql  analyze_resource_costs_by_sku.sql  analyze_service_costs_by_region.sql  analyze_service_costs_by_subaccount.sql  analyze_service_costs_month_over_month.sql  analyze_tag_coverage.sql  compare_billed_cost_per_subaccount_to_budget.sql  compare_resource_usage_month_over_month.sql  determine_effective_savings_rate.sql  determine_effective_savings_rate_by_service.sql  forecast_amortized_costs_month_over_month_based_on.sql  forecast_cashflow_month_over_month_based_on_histor.sql  get_historical_usage_and_rates_to_enable_cost_fore.sql  identify_anomalous_daily_spending_by_subaccount.sql  identify_anomalous_daily_spending_by_subaccount_an.sql  identify_anomalous_daily_spending_by_subaccount_re.sql  identify_unused_commitments.sql  report_application_cost_month_over_month.sql  (+14 more)
resources/specifications/: attributes.yaml  columns.yaml
(+94 files in other folders)
