[project]
name = "focus-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "mcp[cli]>=1.13.1",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
